--- a/site.yml
+++ b/site.yml
@@ -1,63 +1,59 @@
 ---
-
 - hosts: all
   become: true
   pre_tasks:
 
   - name: install updates (CentOS)
+    tags: always
     dnf:
       update_only: yes
       update_cache: yes
     when: ansible_distribution == "CentOS"
 
-  - name: install updates (Ubuntu)
-    apt:
-      upgrade: dist
-      update_cache: yes
-    when: ansible_distribution == "Ubuntu"
+   - name: install updates (Ubuntu)
+     tags: always
+     apt:
+       upgrade: dist
+       update_cache: yes
+     when: ansible_distribution == "Ubuntu"
 
 - hosts: web_servers
   become: true
   tasks:
-
+      
    - name: install apache2 and php packages on Ubuntu
+     tags: apache, apache2, php, ubuntu
      apt:
-       name:
-         - apache2
-         - libapache2-mod-php
-       state: latest
-     when: ansible_distribution == "Ubuntu"
-
+	   name: 
+	      - apache2
+	      - libapache2-mod-php
+	   state: latest
+	  when: ansible_distribution == "Ubuntu" 	  
+      
    - name: install apache2 and php package for centOS
+     tags: CentOS, apache, apache2, php
      dnf:
-       name:
-         - httpd
-         - php
-       state: latest
-       update_cache: yes
-     when: ansible_distribution == "CentOS"
+	   name: 
+	      - httpd
+	      - php
+	   state: latest
+	   update_cache: yes
+	  when: ansible_distribution == "CentOS"
 
 - hosts: db_servers
   become: true
   tasks:
 
     - name: install mariadb package (CentOS)
+      tags: db, mariadb, CentOS
       dnf:
         name: mariadb
         state: latest
       when: ansible_distribution == "CentOS"
 
     - name: install mariadb package (Ubuntu)
+      tags: mariadb, db, ubuntu
       apt:
         name: mariadb-server
         state: latest
       when: ansible_distribution == "Ubuntu"
-
-- hosts: file_servers
-  become: true
-  tasks:
-
-    - name: install samba package
-      package:
-        name: samba
-        state: latest
