--- a/site.yml
+++ b/site.yml
@@ -49,6 +49,27 @@
       group: root
       mode: 0644
 
+
+- hosts: workstations
+  become: true
+  tasks:
+
+- name: install unzip
+  package:
+   name: unzip
+
+- name: install terraform
+  unarchive:
+  src: https://releases.hashicorp.com/terraform/0.12.28/terraform_0.12.28_linux_amd64.zp
+  dest: /usr/local/bin
+  remote_src: yes
+  mode: 0755
+  owner: root
+  group: root
+
+
+
+
 - hosts: db_servers
 
 
