--- a/roles/web_servers/tasks/main.yml
+++ b/roles/web_servers/tasks/main.yml
@@ -1,18 +1,30 @@
-- name: install apache2 and php packages on Ubuntu
-  tags: apache, apache2, php, ubuntu
-  apt:
-    name:
-      - apache2
-      - libapache2-mod-php
-    state: latest
-  when: ansible_distribution == "Ubuntu"
-
 - name: install apache2 and php package for centOS
-  tags: CentOS, apache, apache2, php
+  tags: apache, httpd, php
   dnf:
     name:
-      - httpd
-      - php
+      - "{{apache_package_name}}"
+      - "{{php_package_name}}"
     state: latest
-    update_cache: yes
+
+- name: start and enable apache service
+  tags: apache, httpd
+  service:
+    name: "{{apache_service}}"
+    state: started
+    enabled: yes
+
+- name: change e-mail address for admin
+  tags: apache, centos, httpd
+  lineinfile:
+    path: /etc/httpd/conf/httpd.conf
+    regexp: "^ServerAdmin"
+    line: ServerAdmin somebody@somewhere.net
   when: ansible_distribution == "CentOS"
+  register: httpd
+
+- name: restart httpd (CentOS)
+  tags: apache,apache2,centos,httpd
+  service:
+    name: httpd
+    state: restarted
+  when: httpd.changed
