--- a/roles/web_servers/tasks/main.yml
+++ b/roles/web_servers/tasks/main.yml
@@ -20,11 +20,4 @@
     regexp: "^ServerAdmin"
     line: ServerAdmin somebody@somewhere.net
   when: ansible_distribution == "CentOS"
-  register: httpd
-
-- name: restart httpd (CentOS)
-  tags: apache,apache2,centos,httpd
-  service:
-    name: httpd
-    state: restarted
-  when: httpd.changed
+  notify: restart_apache
