--- a/host_vars/192.168.178.75.yml
+++ b/host_vars/192.168.178.75.yml
@@ -3,5 +3,7 @@ ansible_user: janina
 ansible_port: 22
 ansible_connection: ssh
 ansible_shell_executable: /bin/bash
+ssh_users: "janina simone"
+ssh_template_file: sshd_config_windows.j2
 
 #ansible_password: your_windows_password
