--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,4 +1,10 @@
 [defaults]
 inventory = inventory
 private_key_file = ~/.ssh/ansible
-remote_user = simone
+remote_user = ansible
+
+[privilege_escalation]
+become = True
+become_method = sudo
+become_user = root
+become_ask_pass = False
