--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,9 +1,10 @@
 [defaults]
 inventory = inventory
 private_key_file = ~/.ssh/ansible
-remote_user = ansible
+
 
 [privilege_escalation]
 become = True
 become_ask_pass = False
 host_key_checking = False
+gather_facts = no
