--- a/install_apache.yml
+++ b/install_apache.yml
@@ -1,7 +1,7 @@
 ---
 - hosts: linux_slaves
-  gather_facts: no
   become: true
+  become_method: sudo
   tasks:
     - name: install apache2 and php packages on Ubuntu
       tags: apache, apache2, php, ubuntu
