--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,6 +1,6 @@
 [defaults]
 inventory = inventory
-private_key_file = ~/.ssh/ansible
+private_key_file = ~/tmp/semaphore/.ssh/ansible
 host_key_checking = False
 
 
@@ -8,3 +8,8 @@ host_key_checking = False
 become = True
 become_ask_pass = False
 gather_facts = no
+
+
+[ssh_connection]
+ssh_args = -o StrictHostKeyChecking=accept-new
+
