--- a/ansible.cfg
+++ b/ansible.cfg
@@ -2,6 +2,7 @@
 inventory = inventory
 private_key_file = ~/tmp/semaphore/.ssh/ansible
 host_key_checking = False
+remote_user= ansible
 
 
 [privilege_escalation]
