--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,8 +1,8 @@
 [defaults]
 inventory = inventory
-private_key_file = ~/tmp/semaphore/.ssh/ansible
+private_key_file = ~/.ssh/ansible
 host_key_checking = False
-remote_user= ansible
+remote_user= janina
 
 
 [privilege_escalation]
