--- a/ansible.cfg
+++ b/ansible.cfg
@@ -2,7 +2,7 @@
 inventory = inventory
 private_key_file = ~/.ssh/ansible
 host_key_checking = False
-remote_user= janina
+remote_user= simone
 
 
 [privilege_escalation]
