--- a/scripts/config.json
+++ b/scripts/config.json
@@ -1,10 +1,10 @@
 {
-    "master_server": "192.168.178.78",
-    "linux_servers": [
+    "master": "192.168.178.78",
+    "linux_slaves": [
         "192.168.178.71",
         "192.168.178.72"
     ],
-    "windows_clients": [
+    "windows_slaves": [
         "192.168.178.74",
         "192.168.178.75",
         "192.168.178.79",
