--- a/windows_testfile.yml
+++ b/windows_testfile.yml
@@ -6,6 +6,7 @@
   vars:
     ansible_become_method: runas
     ansible_become_user: Administrator
+    ansible_connection: winrm
 
   tasks:
     - name: Ping Windows clients
