--- a/windows_testfile.yml
+++ b/windows_testfile.yml
@@ -7,6 +7,7 @@
     ansible_become_method: runas
     ansible_become_user: Administrator
     ansible_connection: winrm
+    ansible_winrm_server_cert_validation: ignore
 
   tasks:
     - name: Ping Windows clients
