--- a/windows_testfile.yml
+++ b/windows_testfile.yml
@@ -4,6 +4,8 @@
   gather_facts: no
 
   vars:
+    ansible_become_method: runas
+    ansible_become_user: janina
     ansible_connection: winrm
     ansible_winrm_server_cert_validation: ignore
 
