--- a/windows_testfile.yml
+++ b/windows_testfile.yml
@@ -7,15 +7,23 @@
     - name: Ping Windows clients
       win_ping:
 
+    - name: Define user profile variable
+      set_fact:
+      user_profile: "{{ lookup('env', 'USERPROFILE') }}"
+
     - name: Create a directory on Windows
       win_file:
-        path: C:\$env:USERPROFILE\.ssh
+        path: "C:\\{{ user_profile }}\\.ssh"
         state: directory
 
     - name: Copy a file to Windows
       win_copy:
         src: ~/.ssh/ansible.pub
-        dest: C:\$env:USERPROFILE\.ssh\authorized_keys
+        dest: "C:\\{{ user_profile }}\\.ssh\\authorized_keys"
+
+
+
+
 
 
 
