--- a/windows_testfile.yml
+++ b/windows_testfile.yml
@@ -10,15 +10,15 @@
 
     - name: Create a directory on Windows
       win_file:
-        path: "{{ userprofile_env.stdout }}\\.ssh"
+        path: "{{ userprofile_env.stdout.strip() }}\\.ssh"
         state: directory
 
     - name: Create the authorized key file
       win_file:
-        path: "{{ userprofile_env.stdout }}\\.ssh\\authorized_keys"
+        path: "{{ userprofile_env.stdout.strip() }}\\.ssh\\authorized_keys"
         state: touch
 
     - name: Copy a file to Windows
       win_copy:
         src: ~/.ssh/ansible.pub
-        dest: "{{ userprofile_env.stdout }}\\.ssh\\authorized_keys"
+        dest: "{{ userprofile_env.stdout.strip() }}\\.ssh\\authorized_keys"
