--- a/windows_ssh_key_copy.yml
+++ b/windows_ssh_key_copy.yml
@@ -32,7 +32,7 @@
 
     - name: Copy a file to Windows
       win_copy:
-        src: ~/.ssh/ansible.pub
+        src: tmp/semaphore/.ssh/ansible.pub
         dest: "{{ userprofile_env.stdout.strip() }}\\.ssh\\authorized_keys"
 
     - name: Debug file copy
