--- a/copy_key_to_all_script.yml
+++ b/copy_key_to_all_script.yml
@@ -2,6 +2,7 @@
 - name: Execute Inline Bash Script
   hosts: 127.0.0.1
   connection: local
+  become_user: semaphore
   tasks:
      - name: Run bash script
        shell: |
