--- a/copy_key_to_all_script.yml
+++ b/copy_key_to_all_script.yml
@@ -3,7 +3,7 @@
   hosts: 127.0.0.1
   connection: local
   become_user: janina
-  become_password: passwort
+  become_pass: passwort
   tasks:
      - name: Run bash script
        shell: |
