--- a/copy_key_to_all_script.yml
+++ b/copy_key_to_all_script.yml
@@ -1,48 +1,47 @@
 ---
-- name: Execute Inline Bash Script
-  hosts: 127.0.0.1
-  connection: local
-  ansible_become_user: janina
-  ansible_become_method: sudo
-  ansible_become_pass: passwort
-  tasks:
-     - name: Run bash script
-       shell: |
-         #!/bin/bash
-         # Set the username and the path to the SSH key on the local machine
-         username=simone
-         ssh_key_path=~/.ssh/ansible.pub
-         # Set the list of remote Linux servers
-         servers=(
-             192.168.178.71
-             192.168.178.72
-         )
-         # Loop through the servers and copy the SSH key
-         for server in "${servers[@]}"
-         do
+-  hosts: 127.0.0.1
+   connection: local
+   ansible_become_user: janina
+   ansible_become_method: sudo
+   ansible_become_pass: passwort
+   tasks:
+      - name: Run bash script
+        shell: |
+          #!/bin/bash
+          # Set the username and the path to the SSH key on the local machine
+          username=simone
+          ssh_key_path=~/.ssh/ansible.pub
+          # Set the list of remote Linux servers
+          servers=(
+              192.168.178.71
+              192.168.178.72
+          )
+          # Loop through the servers and copy the SSH key
+          for server in "${servers[@]}"
+          do
              echo "Copying SSH key to linux $server..."
              ssh-copy-id -i $ssh_key_path $username@$server
              # adding them to the known_hosts
              echo "Copying SSH key to known_hosts $server..."
              ssh-keyscan -H $server >> ~/.ssh/known_hosts
-         done
-         #################################### Windows 
-         servers=(
-             192.168.178.74
-             192.168.178.75    
-             192.168.178.79
-             192.168.178.80
-             192.168.178.81   
-         )
-         # Loop through the servers and copy the SSH key
-         for server in "${servers[@]}"
-         do
-             echo "Copying SSH key to windows $server..."
-             scp $ssh_key_path $username@$server:C:/Users/$username/.ssh/authorized_keys
-             # adding them to the known_hosts
-             echo "Copying SSH key to known_hosts $server..."
-             ssh-keyscan -H $server >> ~/.ssh/known_hosts
-         done
+          done
+          #################################### Windows 
+          servers=(
+              192.168.178.74
+              192.168.178.75    
+              192.168.178.79
+              192.168.178.80
+              192.168.178.81   
+          )
+          # Loop through the servers and copy the SSH key
+          for server in "${servers[@]}"
+          do
+              echo "Copying SSH key to windows $server..."
+              scp $ssh_key_path $username@$server:C:/Users/$username/.ssh/authorized_keys
+              # adding them to the known_hosts
+              echo "Copying SSH key to known_hosts $server..."
+              ssh-keyscan -H $server >> ~/.ssh/known_hosts
+          done
     
-       args:
-         executable: /bin/bash
+        args:
+          executable: /bin/bash
