--- a/copy_key_to_all_script.yml
+++ b/copy_key_to_all_script.yml
@@ -1,12 +1,13 @@
 ---
--  hosts: 127.0.0.1
-   connection: local
-   ansible_become_user: janina
-   ansible_become_method: sudo
-   ansible_become_pass: passwort
-   tasks:
-      - name: Run bash script
-        shell: |
+- name: Install applications from directory
+  hosts: 127.0.0.1
+  connection: local
+  ansible_become_user: janina
+  ansible_become_method: sudo
+  ansible_become_pass: passwort
+  tasks:
+     - name: Run bash script
+       shell: |
           #!/bin/bash
           # Set the username and the path to the SSH key on the local machine
           username=simone
@@ -43,5 +44,5 @@
               ssh-keyscan -H $server >> ~/.ssh/known_hosts
           done
     
-        args:
-          executable: /bin/bash
+       args:
+         executable: /bin/bash
