--- a/copy_key_to_all_script.yml
+++ b/copy_key_to_all_script.yml
@@ -1,11 +1,11 @@
 ---
-- name: Install applications from directory
-  hosts: 127.0.0.1
+- hosts: 127.0.0.1
   connection: local
   ansible_become_user: janina
   ansible_become_method: sudo
   ansible_become_pass: passwort
   tasks:
+  
      - name: Run bash script
        shell: |
           #!/bin/bash
