--- a/copy_key_to_all_script.yml
+++ b/copy_key_to_all_script.yml
@@ -2,9 +2,9 @@
 - name: Copy Ansible SSH-Key to windows
   hosts: localhost
   connection: local
-  ansible_become_user: janina
-  ansible_become_method: sudo
-  ansible_become_pass: passwort
+  become_user: janina
+  become_method: sudo
+  become_pass: passwort
   tasks:
 
      - name: Run bash script
