--- a/copy_key_to_all_script.yml
+++ b/copy_key_to_all_script.yml
@@ -1,50 +1,61 @@
 ---
-- name: Copy Ansible SSH-Key to windows
+- name: Distribute SSH keys to Linux and Windows servers
   hosts: localhost
   connection: local
-  become_user: janina
-  become_method: sudo
-
+  vars:
+    username: simone
+    ssh_key_path: "{{ lookup('env', 'HOME') }}/.ssh/ansible.pub"
+    linux_slaves:
+      - 192.168.178.71
+      - 192.168.178.72
+    windows_slaves:
+      - 192.168.178.74
+      - 192.168.178.75
+      - 192.168.178.79
+      - 192.168.178.80
+      - 192.168.178.81
 
   tasks:
+    - name: Ensure SSH key file exists
+      stat:
+        path: "{{ ssh_key_path }}"
+      register: ssh_key_file
 
-     - name: Run bash script
-       shell: |
-          #!/bin/bash
-          # Set the username and the path to the SSH key on the local machine
-          username=simone
-          ssh_key_path=~/.ssh/ansible.pub
-          # Set the list of remote Linux servers
-          servers=(
-              192.168.178.71
-              192.168.178.72
-          )
-          # Loop through the servers and copy the SSH key
-          for server in "${servers[@]}"
-          do
-             echo "Copying SSH key to linux $server..."
-             ssh-copy-id -i $ssh_key_path $username@$server
-             # adding them to the known_hosts
-             echo "Copying SSH key to known_hosts $server..."
-             ssh-keyscan -H $server >> ~/.ssh/known_hosts
-          done
-          #################################### Windows 
-          servers=(
-              192.168.178.74
-              192.168.178.75    
-              192.168.178.79
-              192.168.178.80
-              192.168.178.81   
-          )
-          # Loop through the servers and copy the SSH key
-          for server in "${servers[@]}"
-          do
-              echo "Copying SSH key to windows $server..."
-              scp $ssh_key_path $username@$server:C:/Users/$username/.ssh/authorized_keys
-              # adding them to the known_hosts
-              echo "Copying SSH key to known_hosts $server..."
-              ssh-keyscan -H $server >> ~/.ssh/known_hosts
-          done
-    
-       args:
-         executable: /bin/bash
+    - name: Fail if SSH key file does not exist
+      fail:
+        msg: "SSH key file not found: {{ ssh_key_path }}"
+      when: not ssh_key_file.stat.exists
+
+    - name: Copy SSH key to Linux servers
+      ansible.posix.authorized_key:
+        user: "{{ username }}"
+        state: present
+        key: "{{ lookup('file', ssh_key_path) }}"
+      loop: "{{ linux_servers }}"
+      delegate_to: "{{ item }}"
+
+    - name: Add Linux servers to known_hosts
+      known_hosts:
+        name: "{{ item }}"
+        state: present
+      loop: "{{ linux_servers }}"
+
+    - name: Ensure .ssh directory exists on Windows servers
+      win_file:
+        path: "C:\\Users\\{{ username }}\\.ssh"
+        state: directory
+      loop: "{{ windows_servers }}"
+      delegate_to: "{{ item }}"
+
+    - name: Copy SSH key to Windows servers
+      win_copy:
+        src: "{{ ssh_key_path }}"
+        dest: "C:\\Users\\{{ username }}\\.ssh\\authorized_keys"
+      loop: "{{ windows_servers }}"
+      delegate_to: "{{ item }}"
+
+    - name: Add Windows servers to known_hosts
+      known_hosts:
+        name: "{{ item }}"
+        state: present
+      loop: "{{ windows_servers }}"
