--- a/copy_key_to_all_script.yml
+++ b/copy_key_to_all_script.yml
@@ -3,7 +3,7 @@
   hosts: localhost
   connection: local
   vars:
-    username: janina
+    become_user: janina
     ssh_key_path: "{{ lookup('env', 'HOME') }}/.ssh/ansible.pub"
     linux_slaves:
       - 192.168.178.71
