--- a/copy_key_to_all_script.yml
+++ b/copy_key_to_all_script.yml
@@ -3,8 +3,9 @@
   hosts: localhost
   connection: local
   vars:
-    become_user: janina
-    ssh_key_path: "{{ lookup('env', 'HOME') }}/.ssh/ansible.pub"
+    username: janina
+    ssh_key_path: "/home/janina/.ssh/ansible.pub"
+    
     linux_slaves:
       - 192.168.178.71
       - 192.168.178.72
