--- a/copy_key_to_all_script.yml
+++ b/copy_key_to_all_script.yml
@@ -20,7 +20,12 @@
 
 
 
-
+    - name: Ensure root can read the SSH key file
+      file:
+        path: /home/janina/.ssh/ansible.pub
+        mode: '0644'
+      become: yes
+      become_user: janina
 
 
 
@@ -60,11 +65,15 @@
 
 
     - name: Read SSH key content
-      set_fact:
-        ssh_key_content: "{{ lookup('file', '/home/janina/.ssh/ansible.pub') }}"
+      slurp:
+        src: /home/janina/.ssh/ansible.pub
+      become: yes
+      become_user: janina
+      register: ssh_key_content
 
-    - debug:
-        var: ssh_key_content    
+    - name: Set SSH key fact
+      set_fact:
+        ssh_key: "{{ ssh_key_content['content'] | b64decode }}"   
         
 
 
