--- a/copy_key_to_all_script.yml
+++ b/copy_key_to_all_script.yml
@@ -38,19 +38,57 @@
         state: present
       loop: "{{ linux_slaves }}"
 
-    - name: Ensure .ssh directory exists on Windows slaves
-      win_file:
-        path: "C:\\Users\\{{ username }}\\.ssh"
-        state: directory
-      loop: "{{ windows_slaves }}"
-      delegate_to: "{{ item }}"
 
-    - name: Copy SSH key to Windows slaves
+
+# Windows
+
+    - name: Copy Ansible SSH-Key to windows
+      hosts: windows_slaves
+      gather_facts: no
+      tasks:
+
+    - name: Get USERPROFILE environment variable
+      win_shell: echo $env:USERPROFILE
+      register: userprofile_env
+
+    - name: Debug userprofile_env
+      debug:
+        var: userprofile_env
+
+    - name: Create a directory on Windows
+      win_file:
+        path: "{{ userprofile_env.stdout.strip() }}\\.ssh"
+        state: directory
+
+    - name: Debug directory creation
+      debug:
+        msg: "Directory created at {{ userprofile_env.stdout.strip() }}\\.ssh"
+
+    - name: Create the authorized key file
+      win_file:
+        path: "{{ userprofile_env.stdout.strip() }}\\.ssh\\authorized_keys"
+        state: touch
+
+    - name: Debug key file creation
+      debug:
+        msg: "Authorized key file created at {{ userprofile_env.stdout.strip() }}\\.ssh\\authorized_keys"
+
+    - name: Copy a file to Windows
       win_copy:
-        content: "{{ ssh_key }}"
-        dest: "C:\\Users\\{{ username }}\\.ssh\\authorized_keys"
-      loop: "{{ windows_slaves }}"
-      delegate_to: "{{ item }}"
+        src: home/janina/.ssh/ansible.pub
+        dest: "{{ userprofile_env.stdout.strip() }}\\.ssh\\authorized_keys"
+
+    - name: Debug file copy
+      debug:
+        msg: "File copied to {{ userprofile_env.stdout.strip() }}\\.ssh\\authorized_keys"
+
+
+
+
+
+
+
+
 
     - name: Add Windows slaves to known_hosts
       known_hosts:
