--- a/copy_key_to_all_script copy.yml
+++ b/copy_key_to_all_script copy.yml
@@ -43,6 +43,55 @@
         msg: "Permissions set on {{ user_home }}/.ssh/authorized_keys"
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+- name: Distribute SSH keys to Linux and Windows slaves
+  hosts: localhost
+  connection: local
+  vars:
+    username: janina
+    ssh_key_path: "/home/janina/.ssh/ansible.pub"
+    linux_slaves:
+      - 192.168.178.71
+      - 192.168.178.72
+    windows_slaves:
+      - 192.168.178.74
+      - 192.168.178.75
+      - 192.168.178.79
+      - 192.168.178.80
+      - 192.168.178.81
+
+  tasks:
+    - name: Read SSH key using sudo
+      command: sudo -u janina cat {{ ssh_key_path }}
+      register: ssh_key_content
+
+    - name: Set SSH key fact
+      set_fact:
+        ssh_key: "{{ ssh_key_content.stdout }}"
+
+    - name: Copy SSH key to Linux slaves
+      authorized_key:
+        user: "{{ username }}"
+        state: present
+        key: "{{ ssh_key }}"
+      loop: "{{ linux_slaves }}"
+      delegate_to: "{{ item }}"
+
+
+
     - name: Add Linux slaves to known_hosts
       known_hosts:
         name: "{{ item }}"
@@ -92,6 +141,9 @@
     - name: Debug file copy
       debug:
         msg: "File copied to {{ userprofile_env.stdout.strip() }}\\.ssh\\authorized_keys"
+
+
+
 
 
 
