--- a/copy_key_to_all_script.yml
+++ b/copy_key_to_all_script.yml
@@ -5,45 +5,23 @@
   vars:
     username: janina
     ssh_key_path: "/home/janina/.ssh/ansible.pub"
-    
+
   tasks:
-    - name: Get home directory
+    - name: Read SSH key using sudo
+      command: sudo -u janina cat {{ ssh_key_path }}
+      register: ssh_key_content
+
+    - name: Set SSH key fact
       set_fact:
-        user_home: "{{ ansible_env.HOME }}"
+        ssh_key: "{{ ssh_key_content.stdout }}"
 
-    - name: Debug home directory
-      debug:
-        var: user_home
-
-    - name: Ensure .ssh directory exists
-      file:
-        path: "{{ user_home }}/.ssh"
-        state: directory
-        mode: '0700'
-
-    - name: Debug directory creation
-      debug:
-        msg: "Directory ensured at {{ user_home }}/.ssh"
-
-    - name: Copy SSH key to authorized_keys
+    - name: Copy SSH key to Linux slaves
       authorized_key:
-        user: "{{ ansible_user }}"
+        user: "{{ username }}"
         state: present
-        key: "{{ lookup('file', ansible_ssh_key_path) }}"
-
-    - name: Debug key file update
-      debug:
-        msg: "Authorized key file updated at {{ user_home }}/.ssh/authorized_keys"
-
-    - name: Set correct permissions on authorized_keys
-      file:
-        path: "{{ user_home }}/.ssh/authorized_keys"
-        mode: '0600'
-
-    - name: Debug permissions set
-      debug:
-        msg: "Permissions set on {{ user_home }}/.ssh/authorized_keys"
-
+        key: "{{ ssh_key }}"
+      loop: "{{ linux_slaves }}"
+      delegate_to: "{{ item }}"
 
     - name: Add Linux slaves to known_hosts
       known_hosts:
