--- a/copy_key_to_all_script.yml
+++ b/copy_key_to_all_script.yml
@@ -33,14 +33,21 @@
 
 
 
+    - name: Copy SSH key to windows slaves
+      authorized_key:
+        user: "{{ username }}"
+        state: present
+        key: "{{ ssh_key }}"
+      loop: "{{ windows_slaves }}"
+      delegate_to: "{{ item }}"
+
+
+
     - name: Add Linux slaves to known_hosts
       known_hosts:
         name: "{{ item }}"
         state: present
       loop: "{{ linux_slaves }}"
-
-
-
 # Windows
 
 
