--- a/copy_key_to_all_script.yml
+++ b/copy_key_to_all_script.yml
@@ -39,7 +39,9 @@
         name: "{{ item }}"
         key: "{{ ssh_key }}"
         state: present
+        hash_host: yes
       loop: "{{ linux_slaves }}"
+      ignore_errors: yes
 
 
     - name: Add Windows slaves to known_hosts
@@ -47,7 +49,9 @@
         name: "{{ item }}"
         key: "{{ ssh_key }}"
         state: present
+        hash_host: yes
       loop: "{{ windows_slaves }}"
+      ignore_errors: yes
 
 # Windows
 
