--- a/copy_key_to_all_script.yml
+++ b/copy_key_to_all_script.yml
@@ -59,7 +59,22 @@
 - hosts: windows_slaves
   ignore_unreachable: yes
   gather_facts: no
+  vars:
+    username: janina
+    ssh_key_path: "/home/janina/.ssh/ansible.pub"
   tasks:
+
+
+
+    - name: Read SSH key using sudo
+      command: sudo -u janina cat {{ ssh_key_path }}
+      register: ssh_key_content
+
+    - name: Set SSH key fact
+      set_fact:
+        ssh_key: "{{ ssh_key_content.stdout }}"
+
+
 
     - name: Get USERPROFILE environment variable
       win_shell: echo $env:USERPROFILE
@@ -89,7 +104,7 @@
 
     - name: Copy a file to Windows
       win_copy:
-        src: home/janina/.ssh/ansible.pub
+        src: ssh_key
         dest: "{{ userprofile_env.stdout.strip() }}\\.ssh\\authorized_keys"
 
     - name: Debug file copy
