--- a/copy_key_to_all_script.yml
+++ b/copy_key_to_all_script.yml
@@ -104,7 +104,7 @@
 
     - name: Copy a file to Windows
       win_copy:
-        src: ssh_key
+        src: "{{ ssh_key_content.stdout }}"
         dest: "{{ userprofile_env.stdout.strip() }}\\.ssh\\authorized_keys"
 
     - name: Debug file copy
