--- a/copy_key_to_all_script.yml
+++ b/copy_key_to_all_script.yml
@@ -34,24 +34,7 @@
       delegate_to: "{{ item }}"
 
 
-    - name: Add Linux slaves to known_hosts
-      known_hosts:
-        name: "{{ item }}"
-        key: "{{ ssh_key }}"
-        state: present
-        hash_host: yes
-      loop: "{{ linux_slaves }}"
-      ignore_errors: yes
 
-
-    - name: Add Windows slaves to known_hosts
-      known_hosts:
-        name: "{{ item }}"
-        key: "{{ ssh_key }}"
-        state: present
-        hash_host: yes
-      loop: "{{ windows_slaves }}"
-      ignore_errors: yes
 
 
 
@@ -105,3 +88,35 @@
       debug:
         msg: "Public key content copied to {{ userprofile_env.stdout.strip() }}\\.ssh\\authorized_keys"
       when: ansible_pub_file.stat.exists
+
+
+
+
+
+- hosts: localhost
+  connection: local
+  gather_facts: no
+  vars:
+    all_slaves: "{{ linux_slaves + windows_slaves }}"
+
+  tasks:
+    - name: Scan SSH keys for all slaves
+      command: ssh-keyscan -H -t ed25519 {{ item }}
+      register: ssh_keys
+      loop: "{{ all_slaves }}"
+      ignore_errors: yes
+
+    - name: Add all slaves to known_hosts
+      known_hosts:
+        name: "{{ item.item }}"
+        key: "{{ item.stdout }}"
+        state: present
+      loop: "{{ ssh_keys.results }}"
+      when: item.rc == 0
+      ignore_errors: yes
+
+    - name: Debug known_hosts additions
+      debug:
+        msg: "Added {{ item.item }} to known_hosts"
+      loop: "{{ ssh_keys.results }}"
+      when: item.rc == 0
