--- a/copy_key_to_all_script.yml
+++ b/copy_key_to_all_script.yml
@@ -97,6 +97,15 @@
   connection: local
   gather_facts: no
   vars:
+    linux_slaves:
+      - 192.168.178.71
+      - 192.168.178.72
+    windows_slaves:
+      - 192.168.178.74
+      - 192.168.178.75
+      - 192.168.178.79
+      - 192.168.178.80
+      - 192.168.178.81
     all_slaves: "{{ linux_slaves + windows_slaves }}"
 
   tasks:
